--- a/3rd.html
+++ b/3rd.html
@@ -10,5 +10,10 @@
     <h1>i love you</h1>
     <img src="pics/love.jpg" alt=""><br>
     <img src="pics/window.jpg" height="200" width="280">
+    <div>
+        <ul>
+            <li><a href="https://www.facebook.com/profile.php?id=100038405300472" target="_blank">Visit My Facebook Profile</a></li>
+        </ul>
+    </div>
 </body>
 </html>
